force-app/main/default/objects/Account/fields/Customer_Primary_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Primary_Contact_Email__c</fullName>
    <inlineHelpText>Use this field to capture key contact at customer end with whom business opportunities are being discussed</inlineHelpText>
    <label>Customer Primary Contact Email</label>
    <type>Email</type>
</CustomField>