force-app/main/default/objects/Account/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <description>Select a customer type</description>
    <inlineHelpText>Customer type</inlineHelpText>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Class A - Enterprise</fullName>
            </value>
            <value>
                <fullName>Class B - Mid Size</fullName>
            </value>
            <value>
                <fullName>Class C - Small business</fullName>
            </value>
            <value>
                <fullName>Class D - Partners</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>