force-app/main/default/objects/Account/fields/SF_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>SF_Base_URL__c</fullName>
    <formula>$Api.Partner_Server_URL_340</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SF Base URL</label>
    <type>Text</type>
</CustomField>