force-app/main/default/objects/Account/fields/Total_Active_Opportunites__c.field-meta.xml
<CustomField>
    <fullName>Total_Active_Opportunites__c</fullName>
    <inlineHelpText>Shows total opportunities that are not in Closed status</inlineHelpText>
    <label>Total Active Opportunites</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>Closed Won, Closed Lost</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>