force-app/main/default/objects/Account/validationRules/Revenue_Not_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Revenue_Not_Empty</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( AnnualRevenue )</errorConditionFormula>
    <errorDisplayField>AnnualRevenue</errorDisplayField>
    <errorMessage>Annual Revenue for an account should not be empty</errorMessage>
</ValidationRule>